feat: swagger login menu
