# src/request/models/TypesLoginReq.ts
@@ -1,0 +1,72 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Swagger Example API
+ * This is a sample server celler server.
+ *
+ * The version of the OpenAPI document: 1.0
+ * Contact: support@swagger.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+/**
+ *
+ * @export
+ * @interface TypesLoginReq
+ */
+export interface TypesLoginReq {
+  /**
+   *
+   * @type {string}
+   * @memberof TypesLoginReq
+   */
+  password: string
+  /**
+   *
+   * @type {string}
+   * @memberof TypesLoginReq
+   */
+  userName: string
+}
+
+/**
+ * Check if a given object implements the TypesLoginReq interface.
+ */
+export function instanceOfTypesLoginReq(value: object): boolean {
+  let isInstance = true
+  isInstance = isInstance && 'password' in value
+  isInstance = isInstance && 'userName' in value
+
+  return isInstance
+}
+
+export function TypesLoginReqFromJSON(json: any): TypesLoginReq {
+  return TypesLoginReqFromJSONTyped(json, false)
+}
+
+export function TypesLoginReqFromJSONTyped(json: any, ignoreDiscriminator: boolean): TypesLoginReq {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    password: json['password'],
+    userName: json['userName'],
+  }
+}
+
+export function TypesLoginReqToJSON(value?: TypesLoginReq | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    password: value.password,
+    userName: value.userName,
+  }
+}
